--- a/namaste/namaste_app/templates/dashboard.html
+++ b/namaste/namaste_app/templates/dashboard.html
@@ -2,42 +2,6 @@
 {% load widget_tweaks %}
 {% block content %}
 
-<section class="carousel slide" id="banner" data-ride="carousel" data-pause="false">
-    <div class="carousel-inner">
-        <div class="carousel-item active" style="background-image:url(/static/img/namaste/buddha_hero_banner.jpg)">
-            <div class="banner-caption">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-7">
-                            <style>
-                                .margin-adjust {
-                                    margin-left: 650px; /* Adjusts left margin to push content to the right */
-                                }
-
-                                @media (max-width: 767px) {
-                                    .margin-adjust {
-                                        margin-left: 170px;
-                                    }
-                                }
-                            </style>
-                            <div class="hero-text margin-adjust">
-                                <!-- Desktop image -->
-                                <img src="/static/img/namaste/namaste_hand_logo_black.jpg" alt="namaste_logo" class="desktop-image animated fadeInDown">
-
-                                <!-- Mobile image -->
-                                <img src="/static/img/namaste/namaste_hand_logo_black_136x136.jpg" alt="namaste_logo_mobile" class="mobile-image animated fadeInDown">
-
-                                <h1 class="animated fadeInUp">NAMASTÉ</h1>
-                                <h2 class="animated fadeInUp">Portal De Empleados</h2>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-
 <section class="section-spacing inverse-bg">
     <div class="container">
         <div class="row">
@@ -109,6 +73,18 @@
                     <div class="service-info text-center">
                         <h3><a href="{% url 'register' %}">Añadir Empleados</a></h3>
                         <p>Crear cuenta para empleados</p>
+                        <a href="{% url 'register' %}" class="btn btn-default">Entrar</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="service-item wow fadeIn">
+                    <div class="thumb">
+                        <a href="{% url 'register' %}"><img src="/static/img/namaste/calendar_400x267.jpg" alt=""></a>
+                    </div>
+                    <div class="service-info text-center">
+                        <h3><a href="{% url 'register' %}">Agenda</a></h3>
+                        <p>Agenda de Empleados</p>
                         <a href="{% url 'register' %}" class="btn btn-default">Entrar</a>
                     </div>
                 </div>
