--- a/namaste/namaste_app/templates/base.html
+++ b/namaste/namaste_app/templates/base.html
@@ -101,7 +101,7 @@
 							<ul>
                                 
                                 <li><a href="{% url 'login' %}">Portal de Empleados</a></li>
-								<li><a href="{% url 'relevo' %}">Relevo De Responsabilidad</a></li>
+								<li><a href="{% url 'relevo-clientes' %}">Relevo De Responsabilidad</a></li>
 								<li><a href="{% url 'sobre-nosotros' %}">Sobre Nosotros</a></li>
 								<li><a href="{% url 'servicios' %}">Servicios</a></li>
 								<li><a href="{% url 'contacto' %}">Contactanos</a></li>
