--- a/namaste/namaste_app/templates/booking.html
+++ b/namaste/namaste_app/templates/booking.html
@@ -27,7 +27,7 @@
                     <div class="package text-center">
                         <h3 class="package-title" id="package-title">Gold Detox (6 Secciones)</h3>
                         <a href="#" data-toggle="modal" data-target="#appointment" class="btn btn-default">Reservar</a>
-                        <a href="{% url 'detox-oro' %}" class="btn btn-default">Mas Info</a>
+                        <a href="{% url 'detox-oro' %}" class="btn btn-primary">Mas Info</a>
                     </div>
                 </div>
             </div>
@@ -40,7 +40,7 @@
                     <div class="package text-center">
                         <h3 class="package-title" id="package-title">Metaloterapia (6 Secciones)</h3>
                         <a href="#" data-toggle="modal" data-target="#appointment" class="btn btn-default">Reservar</a>
-                        <a href="{% url 'terapia-metal' %}" class="btn btn-default">Mas Info</a>
+                        <a href="{% url 'terapia-metal' %}" class="btn btn-primary">Mas Info</a>
                     </div>
                 </div>
             </div>
@@ -53,7 +53,7 @@
                     <div class="package text-center">
                         <h3 class="package-title" id="package-title">Maderoterapia (6 Secciones)</h3>
                             <a href="#" data-toggle="modal" data-target="#appointment" class="btn btn-default">Reservar</a>
-                            <a href="{% url 'terapia-madera' %}" class="btn btn-default">Mas Info</a>
+                            <a href="{% url 'terapia-madera' %}" class="btn btn-primary">Mas Info</a>
                     </div>
                 </div>
             </div>
@@ -87,7 +87,7 @@
                         <h3 class="package-title" id="package-title">Masaje Sueco</h3>
                         <p>Este masaje, inspirado en las prácticas suizas de bienestar, utiliza movimientos precisos y presión controlada para liberar la tensión muscular y mejorar la circulación.</p>
                         <a href="#" data-toggle="modal" data-target="#appointment" class="btn btn-default">Reservar</a>
-                        <a href="{% url 'masaje-sueco' %}" class="btn btn-default">Mas Info</a>
+                        <a href="{% url 'masaje-sueco' %}" class="btn btn-primary">Mas Info</a>
                     </div>
                 </div>
             </div>
@@ -101,7 +101,7 @@
                         <h3 class="package-title" id="package-title">Post-Operatorio</h3>
                         <p>Experimenta el poder curativo de un masaje postoperatorio, diseñado para promover la recuperación después de una cirugía.</p>
                         <a href="#" data-toggle="modal" data-target="#appointment" class="btn btn-default">Reservar</a>
-                        <a href="{% url 'post-operatorio' %}" class="btn btn-default">Mas Info</a>
+                        <a href="{% url 'post-operatorio' %}" class="btn btn-primary">Mas Info</a>
                     </div>
                 </div>
             </div>
@@ -115,7 +115,7 @@
                         <h3 class="package-title" id="package-title">Masaje Prenatal</h3>
                         <p>Disfruta de un masaje prenatal diseñado específicamente para mujeres embarazadas, que ofrece alivio y relajación durante esta etapa especial de la vida.</p>
                         <a href="#" data-toggle="modal" data-target="#appointment" class="btn btn-default">Reservar</a>
-                        <a href="{% url 'masaje-prenatal' %}" class="btn btn-default">Mas Info</a>
+                        <a href="{% url 'masaje-prenatal' %}" class="btn btn-primary">Mas Info</a>
                     </div>
                 </div>
             </div>
@@ -129,7 +129,7 @@
                         <h3 class="package-title" id="package-title">Masaje Profundo</h3>
                         <p>Sumérgete en una experiencia revitalizante con nuestro masaje de tejido profundo, diseñado para liberar la tensión muscular y aliviar los nudos de estrés acumulados.</p>
                         <a href="#" data-toggle="modal" data-target="#appointment" class="btn btn-default">Reservar</a>
-                        <a href="{% url 'masaje-profundo' %}" class="btn btn-default">Mas Info</a>
+                        <a href="{% url 'masaje-profundo' %}" class="btn btn-primary">Mas Info</a>
                     </div>
                 </div>
             </div>
@@ -143,7 +143,7 @@
                         <h3 class="package-title" id="package-title">Gold Detox</h3>
                         <p>Técnica creada en Colombia la cual consiste y tiene como función principal desintoxicar, desinflamar, y moldear con un buen drenaje.</p>
                         <a href="#" data-toggle="modal" data-target="#appointment" class="btn btn-default">Reservar</a>
-                        <a href="{% url 'detox-oro' %}" class="btn btn-default">Mas Info</a>
+                        <a href="{% url 'detox-oro' %}" class="btn btn-primary">Mas Info</a>
                     </div>
                 </div>
             </div>
@@ -157,7 +157,7 @@
                         <h3 class="package-title" id="package-title">Vacuslim-48</h3>
                         <p>Nuestro tratamiento de Vacuslim combina la succión controlada con masajes terapéuticos para estimular la circulación, reducir la celulitis y mejorar la firmeza de la piel.</p>
                         <a href="#" data-toggle="modal" data-target="#appointment" class="btn btn-default">Reservar</a>
-                        <a href="{% url 'vacuslim' %}" class="btn btn-default">Mas Info</a>
+                        <a href="{% url 'vacuslim' %}" class="btn btn-primary">Mas Info</a>
                     </div>
                 </div>
             </div>
@@ -172,7 +172,7 @@
                         <h3 class="package-title" id="package-title">Depilación</h3>
                         <p>Disfruta de una piel suave y sin vello con nuestros servicios profesionales de depilación con cera.</p>
                         <a href="#" data-toggle="modal" data-target="#appointment" class="btn btn-default">Reservar</a>
-                        <a href="{% url 'waxing' %}" class="btn btn-default">Mas Info</a>
+                        <a href="{% url 'waxing' %}" class="btn btn-primary">Mas Info</a>
                     </div>
                 </div>
             </div>
@@ -186,7 +186,7 @@
                         <h3 class="package-title" id="package-title">Maderoterapia</h3>
                         <p>Nuestra terapia de madera, una técnica ancestral que utiliza instrumentos de madera natural para estimular la circulación, reducir la celulitis y tonificar la piel.</p>
                         <a href="#" data-toggle="modal" data-target="#appointment" class="btn btn-default">Reservar</a>
-                        <a href="{% url 'terapia-madera' %}" class="btn btn-default">Mas Info</a>
+                        <a href="{% url 'terapia-madera' %}" class="btn btn-primary">Mas Info</a>
                     </div>
                 </div>
             </div>
@@ -200,7 +200,7 @@
                         <h3 class="package-title" id="package-title">Metaloterapia</h3>
                         <p>El metal se desliza suavemente sobre la piel, liberando la tensión muscular, mejorando la circulación y promoviendo una sensación de bienestar profundo.</p>
                         <a href="#" data-toggle="modal" data-target="#appointment" class="btn btn-default">Reservar</a>
-                        <a href="{% url 'terapia-metal' %}" class="btn btn-default">Mas Info</a>
+                        <a href="{% url 'terapia-metal' %}" class="btn btn-primary">Mas Info</a>
                     </div>
                 </div>
             </div>
@@ -214,7 +214,7 @@
                         <h3 class="package-title" id="package-title">Drenaje Linfático</h3>
                         <p>Nuestro masaje de drenaje linfático, una técnica suave y terapéutica diseñada para estimular el sistema linfático y promover la eliminación de toxinas del cuerpo.</p>
                         <a href="#" data-toggle="modal" data-target="#appointment" class="btn btn-default">Reservar</a>
-                        <a href="{% url 'drenaje' %}" class="btn btn-default">Mas Info</a>
+                        <a href="{% url 'drenaje' %}" class="btn btn-primary">Mas Info</a>
                     </div>
                 </div>
             </div>
@@ -228,7 +228,7 @@
                         <h3 class="package-title" id="package-title">Quiromasaje</h3>
                         <p>Consiste en un conjunto de técnicas que tienen como función mejorar los problemas del paciente de acuerdo a sus necesidades.</p>
                         <a href="#" data-toggle="modal" data-target="#appointment" class="btn btn-default">Reservar</a>
-                        <a href="{% url 'quiromasaje' %}" class="btn btn-default">Mas Info</a>
+                        <a href="{% url 'quiromasaje' %}" class="btn btn-primary">Mas Info</a>
                     </div>
                 </div>
             </div>
@@ -242,7 +242,7 @@
                         <h3 class="package-title" id="package-title">Copas Chinas</h3>
                         <p>Esta técnica milenaria, utilizada en la medicina tradicional china, ofrece una manera efectiva de aliviar la tensión muscular y mejorar la circulación.</p>
                         <a href="#" data-toggle="modal" data-target="#appointment" class="btn btn-default">Reservar</a>
-                        <a href="{% url 'copas-chinas' %}" class="btn btn-default">Mas Info</a>
+                        <a href="{% url 'copas-chinas' %}" class="btn btn-primary">Mas Info</a>
                     </div>
                 </div>
             </div>
@@ -256,7 +256,7 @@
                         <h3 class="package-title" id="package-title">Pistola De Masaje</h3>
                         <p>Esta herramienta de vanguardia utiliza percusiones rápidas y profundas para estimular los músculos, aliviar la tensión y mejorar la circulación sanguínea.</p>
                         <a href="#" data-toggle="modal" data-target="#appointment" class="btn btn-default">Reservar</a>
-                        <a href="{% url 'pistola-masaje' %}" class="btn btn-default">Mas Info</a>
+                        <a href="{% url 'pistola-masaje' %}" class="btn btn-primary">Mas Info</a>
                     </div>
                 </div>
             </div>
@@ -270,7 +270,7 @@
                         <h3 class="package-title" id="package-title">Maderoterapia Facial</h3>
                         <p>Esta técnica ancestral, combinada con modernas prácticas de bienestar, utiliza instrumentos de madera especialmente diseñados para estimular y tonificar la piel del rostro, promoviendo un aspecto más juvenil y radiante.</p>
                         <a href="#" data-toggle="modal" data-target="#appointment" class="btn btn-default">Reservar</a>
-                        <a href="{% url 'maderoterapia-facial' %}" class="btn btn-default">Mas Info</a>
+                        <a href="{% url 'maderoterapia-facial' %}" class="btn btn-primary">Mas Info</a>
                     </div>
                 </div>
             </div>
@@ -284,7 +284,7 @@
                         <h3 class="package-title" id="package-title">Lipoláser</h3>
                         <p>Ofrecemos el revolucionario tratamiento Lipoláser, una solución no invasiva para esculpir el cuerpo y reducir la grasa localizada.</p>
                         <a href="#" data-toggle="modal" data-target="#appointment" class="btn btn-default">Reservar</a>
-                        <a href="{% url 'lipolaser' %}" class="btn btn-default">Mas Info</a>
+                        <a href="{% url 'lipolaser' %}" class="btn btn-primary">Mas Info</a>
                     </div>
                 </div>
             </div>
@@ -298,7 +298,7 @@
                         <h3 class="package-title" id="package-title">Vacumterapia</h3>
                         <p>Ayuda a mejorar la apariencia natural del glúteo, eliminando la apariencia de la celulitis primer nivel.</p>
                         <a href="#" data-toggle="modal" data-target="#appointment" class="btn btn-default">Reservar</a>
-                        <a href="{% url 'vacumterapia' %}" class="btn btn-default">Mas Info</a>
+                        <a href="{% url 'vacumterapia' %}" class="btn btn-primary">Mas Info</a>
                     </div>
                 </div>
             </div>
@@ -312,7 +312,7 @@
                         <h3 class="package-title" id="package-title">LeBody</h3>
                         <p>Contrae los músculos a traves de la estimulación y frecuencia. Nos permite tonificar los músculos y moldear el área.</p>
                         <a href="#" data-toggle="modal" data-target="#appointment" class="btn btn-default">Reservar</a>
-                        <a href="{% url 'lebody' %}" class="btn btn-default">Mas Info</a>
+                        <a href="{% url 'lebody' %}" class="btn btn-primary">Mas Info</a>
                     </div>
                 </div>
             </div>
@@ -401,7 +401,7 @@
 									<div class="input-group-addon">
 										<i class="fa fa-calendar"></i>
 									</div>
-									<input type="text" id="rdate" class="form-control date-pic" name="date" placeholder="mm/dd/yyyy" required data-error="Escoga fecha de reservación">
+									<input type="text" id="rdate" class="form-control date-pic" name="date_requested" placeholder="mm/dd/yyyy" required data-error="Escoga fecha de reservación">
 								</div>
 								<div class="help-block with-errors"></div>
 							</div>
