--- a/namaste/namaste_app/templates/contact-us.html
+++ b/namaste/namaste_app/templates/contact-us.html
@@ -109,7 +109,7 @@
 						<p>Reserva tu cita hoy y comienza tu camino hacia una vida más saludable y armoniosa. </p>
 						<p>Disfruta de nuestros servicios personalizados y deja que nuestros expertos te cuiden como mereces.</p>
 						<p>Llamenos al numero: 939-475-7743 o reserva online desde nuestra plataforma.</p>
-						<a href="#" data-toggle="modal" data-target="#appointment" class="btn btn-primary">Reserva Ahora</a>
+						<a href="{% url 'booking' %}" class="btn btn-primary">Reserva Ahora</a>
 					</div>
 				</div>
 				<div class="col-md-6">
