--- a/namaste/namaste_app/templates/dashboard.html
+++ b/namaste/namaste_app/templates/dashboard.html
@@ -80,12 +80,12 @@
             <div class="col-md-4">
                 <div class="service-item wow fadeIn">
                     <div class="thumb">
-                        <a href="{% url 'register' %}"><img src="/static/img/namaste/calendar_400x267.jpg" alt=""></a>
+                        <a href="{% url 'citas-solicitadas' %}"><img src="/static/img/namaste/calendar_400x267.jpg" alt=""></a>
                     </div>
                     <div class="service-info text-center">
-                        <h3><a href="{% url 'register' %}">Agenda</a></h3>
-                        <p>Agenda de Empleados</p>
-                        <a href="{% url 'register' %}" class="btn btn-default">Entrar</a>
+                        <h3><a href="{% url 'citas-solicitadas' %}">Citas Solicitadas</a></h3>
+                        <p>Maneje todas las citas solicitadas por clientes desde tu plataforma.</p>
+                        <a href="{% url 'citas-solicitadas' %}" class="btn btn-default">Entrar</a>
                     </div>
                 </div>
             </div>
