--- a/namaste/namaste_app/templates/drainage.html
+++ b/namaste/namaste_app/templates/drainage.html
@@ -25,10 +25,10 @@
 				<div class="col-md-4">
 					<div class="service-item wow fadeIn">
 						<div class="thumb">
-							<a href="{% url 'drenaje' %}"><img src="/static/img/namaste/drenaje2.jpg" alt=""></a>
+							<img src="/static/img/namaste/drenaje2.jpg" alt="">
 						</div>
-						<div class="service-info text-center">
-							<h3><a href="{% url 'drenaje' %}">Drenaje Linfático</a></h3>
+						<div class="package text-center">
+							<h3 class="package-title" id="package-title">Drenaje Linfático</h3>
 							<p>Nuestro masaje de drenaje linfático, una técnica suave y terapéutica diseñada para estimular el sistema linfático y promover la eliminación de toxinas del cuerpo.</p>
 							<a href="#" data-toggle="modal" data-target="#appointment" class="btn btn-default">Reserva Ahora</a>
 						</div>
@@ -136,125 +136,106 @@
 	<!-- end te podria gustar -->
 	
 	<!-- Appointment Modal -->
-    <div class="modal fade modal-vcenter" id="appointment" role="dialog">
-        <div class="modal-dialog modal-lg" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h2>RESERVA TU CITA</h2>
-                </div>
-                <div class="modal-body">
-					<!--<form id="reservation-form" method="post" data-toggle="validator">-->
-					<form action="/drenaje/" method="POST" data-toggle="validator">
-						{% csrf_token %}
-						<div class="row">
-							<div class="col-xs-12 col-sm-6">
-								<div class="form-group">
-									<label>Nombre*</label>
-									<input type="text" id="rfname" class="form-control" name="first_name" required data-error="Provee su primer nombre">
-									<div class="help-block with-errors"></div>
-								</div>
+<div class="modal fade modal-vcenter" id="appointment" role="dialog">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h2>RESERVA TU CITA</h2>
+            </div>
+            <div class="modal-body">
+				<form action="{% url 'booking' %}" method="POST" data-toggle="validator">
+					{% csrf_token %}
+					<div class="row">
+						<div class="col-xs-12 col-sm-6">
+							<div class="form-group">
+								<label>Nombre*</label>
+								<input type="text" id="rfname" class="form-control" name="first_name" required data-error="Provee su primer nombre">
+								<div class="help-block with-errors"></div>
 							</div>
+						</div>
 							
-							<div class="col-xs-12 col-sm-6">
-								<div class="form-group">
-									<label>Apellido</label>
-									<input type="text" id="rlname" class="form-control" name="last_name" >
-								</div>
+						<div class="col-xs-12 col-sm-6">
+							<div class="form-group">
+								<label>Apellido</label>
+								<input type="text" id="rlname" class="form-control" name="last_name" >
 							</div>
 						</div>
+					</div>
 						
-						<div class="row">
-							<div class="col-xs-12 col-sm-6">
-								<div class="form-group">
-									<label>Email*</label>
-									<input type="email" id="remail" class="form-control" name="email_address" required data-error="Provee su correo electronico">
-									<div class="help-block with-errors"></div>
-								</div>
+					<div class="row">
+						<div class="col-xs-12 col-sm-6">
+							<div class="form-group">
+								<label>Email*</label>
+								<input type="email" id="remail" class="form-control" name="email_address" required data-error="Provee su correo electronico">
+								<div class="help-block with-errors"></div>
 							</div>
+						</div>
 							
-							<div class="col-xs-12 col-sm-6">
-								<div class="form-group">
-									<label>Teléfono*</label>
-									<input type="tel" id="rphone" class="form-control" name="phone_number" required data-error="Provee su numero de teléfono">
-									<div class="help-block with-errors"></div>
-								</div>
+						<div class="col-xs-12 col-sm-6">
+							<div class="form-group">
+								<label>Teléfono*</label>
+								<input type="tel" id="rphone" class="form-control" name="phone_number" required data-error="Provee su numero de teléfono">
+								<div class="help-block with-errors"></div>
 							</div>
+						</div>
 							
-						</div>
+					</div>
 						
-						<div class="form-group">
-							<label>Dirección</label>
-							<input type="text" id="raddress" class="form-control" name="address">
-						</div>
+					<div class="form-group">
+						<label>Dirección</label>
+						<input type="text" id="raddress" class="form-control" name="address">
+					</div>
 						
-						<div class="row">
-							<div class="col-xs-12 col-sm-4">
-								<div class="form-group">
-									<label>Zip Code</label>
-									<input type="text" id="rzipcode" class="form-control" name="zip">
-								</div>
+					<div class="row">
+						<div class="col-xs-12 col-sm-4">
+							<div class="form-group">
+								<label>Zip Code</label>
+								<input type="text" id="rzipcode" class="form-control" name="zip">
 							</div>
+						</div>
 							
-							<div class="col-xs-12 col-sm-8">
-								<div class="form-group">
-									<label>Ciudad</label>
-									<input type="text" id="rcity" class="form-control" name="city">
-								</div>
+						<div class="col-xs-12 col-sm-8">
+							<div class="form-group">
+								<label>Ciudad</label>
+								<input type="text" id="rcity" class="form-control" name="city">
 							</div>
 						</div>
+					</div>
 						
-						<div class="form-group">
-							<label>Servicio</label>
-							<select id="rselect-service" class="select-option" name="service">
-								<option value="Masajes">Masajes</option>
-								<option value="Drenajes">Drenajes</option>
-								<option value="Gold Detox">Tratamientos</option>
-								<option value="Depilación">Depilación</option>
-							</select>
-						</div>
+					<div class="form-group">
+						<label for="selected-package">Servicio</label>
+                        <input type="text" class="form-control" id="selected-package" placeholder="Package will appear here" name="service" readonly>
+					</div>
 						
-						<div class="row">
-							<div class="col-xs-12 col-sm-6">
-								<div class="form-group">
-									<label>Fecha de Reservación*</label>
-									<div class="input-group">
-										<div class="input-group-addon">
-											<i class="fa fa-calendar"></i>
-										</div>
-										<input type="text" id="rdate" class="form-control date-pic" name="date" placeholder="mm/dd/yyyy" required data-error="Escoga fecha de reservación">
-									</div><!-- /.input group -->
-									<div class="help-block with-errors"></div>
+					<div class="row">
+						<div class="col-xs-12 col-sm-12">
+							<div class="form-group">
+								<label>Fecha de Reservación*</label>
+								<div class="input-group">
+									<div class="input-group-addon">
+										<i class="fa fa-calendar"></i>
+									</div>
+									<input type="text" id="rdate" class="form-control date-pic" name="date_requested" placeholder="mm/dd/yyyy" required data-error="Escoga fecha de reservación">
 								</div>
-							</div>
-							
-							<div class="col-xs-12 col-sm-6">
-								<div class="bootstrap-timepicker">
-									<div class="form-group">
-										<label>Hora*</label>
-										<div class="input-group">
-											<div class="input-group-addon">
-												<i class="fa fa-clock-o"></i>
-											</div>
-											<input type="text" id="rtime" name="time" class="form-control timepicker" required data-error="Escoga hora de reservación">
-										</div><!-- /.input group -->
-										<div class="help-block with-errors"></div>
-									</div><!-- /.form group -->
-								</div>
+								<div class="help-block with-errors"></div>
 							</div>
 						</div>
+					</div>
 						
-						<div class="submit-block text-right">
-							<a href="#" class="btn btn-default" data-dismiss="modal">Cancel</a>
-							<input value="Submit" name="submit" class="btn btn-primary" type="submit">
-						</div>
+					<div class="submit-block text-right">
+						<a href="#" class="btn btn-default" data-dismiss="modal">Cancel</a>
+						<input value="Submit" name="submit" class="btn btn-primary" type="submit">
+					</div>
 						
-						<div id="msgSubmitRes" class="h3 text-center hidden"></div>
+					<div id="msgSubmitRes" class="h3 text-center hidden"></div>
 						
-					</form>
-                </div>
+				</form>
             </div>
         </div>
     </div>
+</div>
+
+<script src="/static/js/booking.js"></script>
 	
     {% endblock %}
