--- a/namaste/namaste_app/templates/massage_pistol.html
+++ b/namaste/namaste_app/templates/massage_pistol.html
@@ -25,10 +25,10 @@
 				<div class="col-md-4">
 					<div class="service-item wow fadeIn">
 						<div class="thumb">
-							<a href="{% url 'pistola-masaje' %}"><img src="/static/img/namaste/massage_gun (1).jpg" alt=""></a>
+							<img src="/static/img/namaste/massage_gun (1).jpg" alt="">
 						</div>
-						<div class="service-info text-center">
-							<h3><a href="{% url 'pistola-masaje' %}">Pistola De Masaje</a></h3>
+						<div class="package text-center">
+							<h3 class="package-title" id="package-title">Pistola De Masaje</h3>
 							<p>Esta herramienta de vanguardia utiliza percusiones rápidas y profundas para estimular los músculos, aliviar la tensión y mejorar la circulación sanguínea.</p>
 							<a href="#" data-toggle="modal" data-target="#appointment" class="btn btn-default">Reserva Ahora</a>
 						</div>
@@ -137,16 +137,15 @@
 	<!-- end services -->
 	
 	<!-- Appointment Modal -->
-    <div class="modal fade modal-vcenter" id="appointment" role="dialog">
-        <div class="modal-dialog modal-lg" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h2>RESERVA TU CITA</h2>
-                </div>
-                <div class="modal-body">
-					<!--<form id="reservation-form" method="post" data-toggle="validator">-->
-					<form action="/pistola-masaje/" method="POST" data-toggle="validator">
+	<div class="modal fade modal-vcenter" id="appointment" role="dialog">
+		<div class="modal-dialog modal-lg" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+					<h2>RESERVA TU CITA</h2>
+				</div>
+				<div class="modal-body">
+					<form action="{% url 'booking' %}" method="POST" data-toggle="validator">
 						{% csrf_token %}
 						<div class="row">
 							<div class="col-xs-12 col-sm-6">
@@ -156,7 +155,7 @@
 									<div class="help-block with-errors"></div>
 								</div>
 							</div>
-							
+								
 							<div class="col-xs-12 col-sm-6">
 								<div class="form-group">
 									<label>Apellido</label>
@@ -164,7 +163,7 @@
 								</div>
 							</div>
 						</div>
-						
+							
 						<div class="row">
 							<div class="col-xs-12 col-sm-6">
 								<div class="form-group">
@@ -173,7 +172,7 @@
 									<div class="help-block with-errors"></div>
 								</div>
 							</div>
-							
+								
 							<div class="col-xs-12 col-sm-6">
 								<div class="form-group">
 									<label>Teléfono*</label>
@@ -181,14 +180,14 @@
 									<div class="help-block with-errors"></div>
 								</div>
 							</div>
-							
+								
 						</div>
-						
+							
 						<div class="form-group">
 							<label>Dirección</label>
 							<input type="text" id="raddress" class="form-control" name="address">
 						</div>
-						
+							
 						<div class="row">
 							<div class="col-xs-12 col-sm-4">
 								<div class="form-group">
@@ -196,7 +195,7 @@
 									<input type="text" id="rzipcode" class="form-control" name="zip">
 								</div>
 							</div>
-							
+								
 							<div class="col-xs-12 col-sm-8">
 								<div class="form-group">
 									<label>Ciudad</label>
@@ -204,58 +203,40 @@
 								</div>
 							</div>
 						</div>
-						
+							
 						<div class="form-group">
-							<label>Servicio</label>
-							<select id="rselect-service" class="select-option" name="service">
-								<option value="Masajes">Masajes</option>
-								<option value="Drenajes">Drenajes</option>
-								<option value="Gold Detox">Tratamientos</option>
-								<option value="Depilación">Depilación</option>
-							</select>
+							<label for="selected-package">Servicio</label>
+							<input type="text" class="form-control" id="selected-package" placeholder="Package will appear here" name="service" readonly>
 						</div>
-						
+							
 						<div class="row">
-							<div class="col-xs-12 col-sm-6">
+							<div class="col-xs-12 col-sm-12">
 								<div class="form-group">
 									<label>Fecha de Reservación*</label>
 									<div class="input-group">
 										<div class="input-group-addon">
 											<i class="fa fa-calendar"></i>
 										</div>
-										<input type="text" id="rdate" class="form-control date-pic" name="date" placeholder="mm/dd/yyyy" required data-error="Escoga fecha de reservación">
-									</div><!-- /.input group -->
+										<input type="text" id="rdate" class="form-control date-pic" name="date_requested" placeholder="mm/dd/yyyy" required data-error="Escoga fecha de reservación">
+									</div>
 									<div class="help-block with-errors"></div>
 								</div>
 							</div>
-							
-							<div class="col-xs-12 col-sm-6">
-								<div class="bootstrap-timepicker">
-									<div class="form-group">
-										<label>Hora*</label>
-										<div class="input-group">
-											<div class="input-group-addon">
-												<i class="fa fa-clock-o"></i>
-											</div>
-											<input type="text" id="rtime" name="time" class="form-control timepicker" required data-error="Escoga hora de reservación">
-										</div><!-- /.input group -->
-										<div class="help-block with-errors"></div>
-									</div><!-- /.form group -->
-								</div>
-							</div>
 						</div>
-						
+							
 						<div class="submit-block text-right">
 							<a href="#" class="btn btn-default" data-dismiss="modal">Cancel</a>
 							<input value="Submit" name="submit" class="btn btn-primary" type="submit">
 						</div>
-						
+							
 						<div id="msgSubmitRes" class="h3 text-center hidden"></div>
-						
+							
 					</form>
-                </div>
-            </div>
-        </div>
-    </div>
+				</div>
+			</div>
+		</div>
+	</div>
+	
+	<script src="/static/js/booking.js"></script>
 	
     {% endblock %}
